--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/iconfont1.css">
     <link rel="stylesheet" href="./css/iconfont2.css">
+    <link rel="stylesheet" href="./css/iconfont3.css">
     <script src="./js/jQuery.js"></script>
     <script src="./js/index.js"></script>
 </head>
@@ -53,10 +54,10 @@
         </div>
         <div class="container-fluid xia2">
             <div class="row xia-con-zi">
-                <div class="col-s-3">colleation1</div>
-                <div class="col-s-3">colleation1</div>
-                <div class="col-s-3">colleation1</div>
-                <div class="col-s-3">colleation1</div>
+                <div class="col-s-3">flowers</div>
+                <div class="col-s-3">flowers</div>
+                <div class="col-s-3">flowers</div>
+                <div class="col-s-3">flowers</div>
             </div>
         </div>
     </div>
@@ -96,9 +97,11 @@
         <div class="col-s-12 col-m-12 col-l-12 banner"></div>
         <div class="banzhezhao"></div>
         <div class="info">
-            <div class="self">
-                姓名 : 马天娇<br>
-                年龄 : 23
+            <div class="self"><br>
+                姓名 : 马天娇<br><br>
+                年龄 : 23<br><br>
+                山西省吕梁学院<br><br>
+                计算机科学与技术系<br>
             </div>
             <div class="hellow" data-ani="animate-rotatex">Hello</div>
         </div>
@@ -244,7 +247,7 @@
         <div class="zuopin zuopin1">游戏 & 应用</div>
         <div class="huan hda iconfont icon-huanyipi"></div>
         <div class="huan hzhong youxiyin iconfont icon-huanyipi"></div>
-        <div class="huan hxiao youxiyin iconfont icon-huanyipi"></div>
+        <!--<div class="huan hxiao youxiyin iconfont icon-huanyipi"></div>-->
     </div>
 </div>
 <!--大-->
@@ -293,28 +296,28 @@
             <div class="yuanzhao">画板</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx11"><a href="http://matianjiao.github.io/beiwanglu"></a></div>
-            <div class="yuanzhao">备忘录</div>
-        </div>
-        <div class="col-l-3">
-            <div class="imgyouxi yx12"><a href="http://matianjiao.github.io/jisuanqi"></a></div>
+            <div class="imgyouxi yx11"><a href="http://matianjiao.github.io/jisuanqi"></a></div>
             <div class="yuanzhao">计算器</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx13"><a href="http://matianjiao.github.io/daziyouxi"></a></div>
-            <div class="yuanzhao">打字游戏</div>
+            <div class="imgyouxi yx12"></div>
+            <div class="yuanzhao">Flower</div>
+        </div>
+        <div class="col-l-3">
+            <div class="imgyouxi yx13"></a></div>
+            <div class="yuanzhao">Flower</div>
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx14"></div>
-            <div class="yuanzhao">iCloud日历</div>
+            <div class="yuanzhao">Flower</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx15"><a href="http://matianjiao.github.io/xiaomi"></a></div>
-            <div class="yuanzhao">小米</div>
+            <div class="imgyouxi yx15"></div>
+            <div class="yuanzhao">Flower</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx16"><a href="http://matianjiao.github.io/tianmao"></a></div>
-            <div class="yuanzhao">天猫</div>
+            <div class="imgyouxi yx16"></div>
+            <div class="yuanzhao">Flower</div>
         </div>
     </div>
 </div>
@@ -369,13 +372,15 @@
             <div class="yuanzhao">计算器</div>
         </div>
         <div class="col-m-4">
-            <div class="imgyouxi yx12"><a href="http://matianjiao.github.io/huaban"></a></div>
-            <div class="yuanzhao">备忘录</div>
+            <div class="imgyouxi yx12"></div>
+            <div class="yuanzhao">Flower</div>
         </div>
     </div>
 </div>
 <!--小-->
 <div class="container-fluid youxi-con youxiao">
+    <div class="xiangzuo iconfont icon-zuojiantou"></div>
+    <div class="xiangyou iconfont icon-dashangpinglun18"></div>
     <div class="row youxi youxixiao">
         <div class="col-s-12">
             <div class="imgyouxi yx1"><a href="http://matianjiao.github.io/wuziqi"></a></div>
@@ -429,12 +434,12 @@
     <div class="container-fluid">
         <div class="row youxi youxixiao youxiyin">
             <div class="col-s-12">
-                <div class="imgyouxi yx11"><a href="http://matianjiao.github.io/huaban"></a></div>
-                <div class="yuanzhao">备忘录</div>
+                <div class="imgyouxi yx11"><a href="http://matianjiao.github.io/jisuanqi"></a></div>
+                <div class="yuanzhao">计算器</div>
             </div>
             <div class="col-s-12">
-                <div class="imgyouxi yx12"><a href="http://matianjiao.github.io/jisuanqi"></a></div>
-                <div class="yuanzhao">计算器</div>
+                <div class="imgyouxi yx12"></div>
+                <div class="yuanzhao">Flower</div>
             </div>
         </div>
     </div>
