--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
     <div class="header1-con">
         <div class="container">
             <div class="row header1-col">
-                <div class="col-s-3">Home<span class="header-span">|</span></div>
-                <div class="col-s-2">Products<span class="header-span">|</span></div>
+                <div class="col-s-3 tiao">Home<span class="header-span">|</span></div>
+                <div class="col-s-2 tiao">Products<span class="header-span">|</span></div>
                 <!--<div class="col-s-2">Work<span class="header-span">|</span></div>-->
                 <div class="col-s-3">Collections
                     <span data-role="xiangxia"></span>
                     <span class="header-span">|</span>
                 </div>
-                <div class="col-s-2">About me<span class="header-span">|</span></div>
-                <div class="col-s-2">Contact</div>
+                <div class="col-s-2 tiao">About me<span class="header-span">|</span></div>
+                <div class="col-s-2 tiao">Contact</div>
             </div>
         </div>
     </div>
@@ -90,7 +90,7 @@
 </div>
 
 <!--banner-->
-<div class="container-fluid">
+<div class="container-fluid floor">
     <div class="row ban">
         <div class="col-s-12 col-m-12 col-l-12 banner"></div>
         <div class="col-s-12 col-m-12 col-l-12 banner"></div>
@@ -126,7 +126,7 @@
 
 
 <!--照片墙-->
-<div class="container-fluid">
+<div class="container-fluid floor">
     <div class="row">
         <div class="zuopin">作品集</div>
     </div>
@@ -300,8 +300,8 @@
             <div class="yuanzhao">计算器</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx12"></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="imgyouxi yx12"><a href="http://jintianxia.duapp.com/"></a></div>
+            <div class="yuanzhao">晋天下官方网站</div>
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx13"></a></div>
@@ -381,6 +381,7 @@
 <div class="container-fluid youxi-con youxiao">
     <div class="xiangzuo iconfont icon-zuojiantou"></div>
     <div class="xiangyou iconfont icon-dashangpinglun18"></div>
+    <div class="hudie"></div>
     <div class="row youxi youxixiao">
         <div class="col-s-12">
             <div class="imgyouxi yx1"><a href="http://matianjiao.github.io/wuziqi"></a></div>
@@ -452,7 +453,7 @@
 
 
 <!--关于我-->
-<div class="container-fluid">
+<div class="container-fluid floor">
     <div class="row">
         <div class="zuopin">关于我</div>
     </div>
@@ -468,7 +469,7 @@
             </div>
         </div>
         <div class="col-m-4 col-l-4 col-m-h col-s-h">
-            <h1>我是谁?</h1>
+            <h1>我 是 谁?</h1>
             <p><span>姓名:</span>马天娇</p>
             <p><span>院系:</span>山西省吕梁学院<br> 计算机科学与技术系</p>
             <p>
@@ -481,7 +482,7 @@
             </p>
         </div>
         <div class="col-s-12 col-m-8 col-l-5 ">
-            <h1>技能</h1>
+            <h1>技   能</h1>
             <p>能够使用HTML5/CSS3熟练地进行页面开发</p>
             <p>根据前端UI设计组输出的设计稿进行页面的实现</p>
             <p>精通DIV+CSS网页框架布局的HTML代码编写</p>
@@ -495,10 +496,8 @@
 </div>
 
 
-
-
 <!--联系我-->
-<div class="container-fluid">
+<div class="container-fluid floor">
     <div class="row">
         <div class="zuopin">联系我</div>
     </div>
@@ -511,7 +510,6 @@
                 <div class="iconfont icon-dianhua lianxi"></div>
                 <p>183-3580-0751</p>
             </div>
-
         </div>
 
         <div class="col-s-12 col-m-6 col-l-6 about1">
@@ -521,9 +519,17 @@
                 <p>18335830751@163.com</p>
             </div>
         </div>
+
+        <div class="taoxin taoxin1"></div>
+        <div class="taoxin taoxin2"></div>
+        <div class="taoxin taoxin3"></div>
+        <div class="taoxin taoxin4"></div>
+        <div class="taoxin taoxin5"></div>
     </div>
 </div>
 
+<!--返回顶部-->
+<div class="top iconfont icon-zuojiantou"></div>
 
 </body>
 </html>
