--- a/index.html
+++ b/index.html
@@ -304,12 +304,12 @@
             <div class="yuanzhao">晋天下官方网站</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx13"></a></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="imgyouxi yx13"><a href="http://matianjiao.github.io/apple"></a></div>
+            <div class="yuanzhao">Apple官网</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx14"></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="imgyouxi yx14"><a href="http://matianjiao.github.io/jishiben"></a></div>
+            <div class="yuanzhao">记事本</div>
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx15"></div>
@@ -376,6 +376,33 @@
             <div class="yuanzhao">Flower</div>
         </div>
     </div>
+    <div class="row youxi youxizhong youxiyin">
+        <div class="col-m-4">
+            <div class="imgyouxi yx13"><a href="http://matianjiao.github.io/apple"></a></div>
+            <div class="yuanzhao">Apple官网</div>
+        </div>
+        <div class="col-m-4">
+            <div class="imgyouxi yx14"><a href="http://matianjiao.github.io/jishiben"></a></div>
+            <div class="yuanzhao">记事本</div>
+        </div>
+        <div class="col-m-4">
+            <div class="imgyouxi yx15"></div>
+            <div class="yuanzhao">Flower</div>
+        </div>
+        <div class="col-m-4">
+            <div class="imgyouxi yx16"></div>
+            <div class="yuanzhao">Flower</div>
+        </div>
+        <div class="col-m-4">
+            <div class="imgyouxi yx17"></div>
+            <div class="yuanzhao">Flower</div>
+        </div>
+        <div class="col-m-4">
+            <div class="imgyouxi yx18"></div>
+            <div class="yuanzhao">Flower</div>
+        </div>
+    </div>
+
 </div>
 <!--小-->
 <div class="container-fluid youxi-con youxiao">
@@ -432,16 +459,24 @@
             <div class="yuanzhao">画板</div>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="row youxi youxixiao youxiyin">
-            <div class="col-s-12">
-                <div class="imgyouxi yx11"><a href="http://matianjiao.github.io/jisuanqi"></a></div>
-                <div class="yuanzhao">计算器</div>
-            </div>
-            <div class="col-s-12">
-                <div class="imgyouxi yx12"></div>
-                <div class="yuanzhao">Flower</div>
-            </div>
+    <div class="row youxi youxixiao youxiyin">
+        <div class="col-s-12">
+            <div class="imgyouxi yx11"><a href="http://matianjiao.github.io/jisuanqi"></a></div>
+            <div class="yuanzhao">计算器</div>
+        </div>
+        <div class="col-s-12">
+            <div class="imgyouxi yx12"><a href="http://jintianxia.duapp.com/"></a></div>
+            <div class="yuanzhao">晋天下官方网站</div>
+        </div>
+    </div>
+    <div class="row youxi youxixiao youxiyin">
+        <div class="col-l-3">
+            <div class="imgyouxi yx13"><a href="http://matianjiao.github.io/apple"></a></div>
+            <div class="yuanzhao">Apple官网</div>
+        </div>
+        <div class="col-l-3">
+            <div class="imgyouxi yx14"><a href="http://matianjiao.github.io/jishiben"></a></div>
+            <div class="yuanzhao">记事本</div>
         </div>
     </div>
 
@@ -469,27 +504,25 @@
             </div>
         </div>
         <div class="col-m-4 col-l-4 col-m-h col-s-h">
-            <h1>我 是 谁?</h1>
-            <p><span>姓名:</span>马天娇</p>
-            <p><span>院系:</span>山西省吕梁学院<br> 计算机科学与技术系</p>
-            <p>
-                <span>自我评价:</span>
-                做事讲原则，说到做到，决不推卸责任<br>
-                有自制力，做事情有始有终，从不半途而废<br>
-                自信但不自负、不以自我为中心<br>
-                积极进取、适应力强、勤奋好学、脚踏实地<br>
-                有较强的团队精神、工作积极进取、态度认真<br>
-            </p>
+            <h1>自我评价:</h1>
+            <p>做事讲原则，说到做到，决不推卸责任</p>
+            <p>有自制力，做事情从不半途而废</p>
+            <p>有较强的团队精神、工作积极进取、态度认真</p>
+            <p>自信但不自负、不以自我为中心</p>
+            <p>积极进取、适应力强、勤奋好学、脚踏实地</p>
+            <h1>座右铭:</h1>
+            <p>人生就像心电图,要想一帆风顺除非你死了</p>
+
         </div>
         <div class="col-s-12 col-m-8 col-l-5 ">
             <h1>技   能</h1>
-            <p>能够使用HTML5/CSS3熟练地进行页面开发</p>
+            <p>能够使用HTML5/CSS3进行页面开发</p>
             <p>根据前端UI设计组输出的设计稿进行页面的实现</p>
             <p>精通DIV+CSS网页框架布局的HTML代码编写</p>
+            <p>精通ps Ai绘图工具</p>
             <p>能对Web前端页面进行开发，实现页面交互等</p>
             <p>能使用Javascript完成代码的编写和优化工作</p>
             <p>熟悉Ajax、JQuery等Web前端开发技术</p>
-            <p>精通ps Ai绘图工具</p>
         </div>
     </div>
 
