--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         </div>
         <div class="container-fluid xia2">
             <div class="row xia-con-zi">
-                <div class="col-s-3">flowers</div>
-                <div class="col-s-3">flowers</div>
-                <div class="col-s-3">flowers</div>
-                <div class="col-s-3">flowers</div>
+                <div class="col-s-3">Flowers</div>
+                <div class="col-s-3">Flowers</div>
+                <div class="col-s-3">Flowers</div>
+                <div class="col-s-3">Flowers</div>
             </div>
         </div>
     </div>
@@ -78,19 +78,17 @@
         </div>
         <div class="container header2-right">
             <div class="row">
-                <div class="col-s-12">Home</div>
-                <div class="col-s-12">Products</div>
-                <div class="col-s-12">Work</div>
-                <div class="col-s-12">Collections</div>
-                <div class="col-s-12">About me</div>
-                <div class="col-s-12">Contacts</div>
+                <div class="col-s-12 tiao1">Home</div>
+                <div class="col-s-12 tiao1">Products</div>
+                <div class="col-s-12 tiao1">About me</div>
+                <div class="col-s-12 tiao1">Contacts</div>
             </div>
         </div>
     </div>
 </div>
 
 <!--banner-->
-<div class="container-fluid floor">
+<div class="container-fluid floor floor1">
     <div class="row ban">
         <div class="col-s-12 col-m-12 col-l-12 banner"></div>
         <div class="col-s-12 col-m-12 col-l-12 banner"></div>
@@ -99,7 +97,7 @@
         <div class="info">
             <div class="self"><br>
                 姓名 : 马天娇<br><br>
-                年龄 : 23<br><br>
+                年龄 : 24<br><br>
                 山西省吕梁学院<br><br>
                 计算机科学与技术系<br>
             </div>
@@ -126,7 +124,7 @@
 
 
 <!--照片墙-->
-<div class="container-fluid floor">
+<div class="container-fluid floor floor1">
     <div class="row">
         <div class="zuopin">作品集</div>
     </div>
@@ -313,11 +311,11 @@
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx15"></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="yuanzhao">待续...</div>
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx16"></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="yuanzhao">待续...</div>
         </div>
     </div>
 </div>
@@ -373,7 +371,7 @@
         </div>
         <div class="col-m-4">
             <div class="imgyouxi yx12"></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="yuanzhao">待续...</div>
         </div>
     </div>
     <div class="row youxi youxizhong youxiyin">
@@ -387,19 +385,19 @@
         </div>
         <div class="col-m-4">
             <div class="imgyouxi yx15"></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="yuanzhao">待续...</div>
         </div>
         <div class="col-m-4">
             <div class="imgyouxi yx16"></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="yuanzhao">待续...</div>
         </div>
         <div class="col-m-4">
             <div class="imgyouxi yx17"></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="yuanzhao">待续...</div>
         </div>
         <div class="col-m-4">
             <div class="imgyouxi yx18"></div>
-            <div class="yuanzhao">Flower</div>
+            <div class="yuanzhao">待续...</div>
         </div>
     </div>
 
@@ -488,7 +486,7 @@
 
 
 <!--关于我-->
-<div class="container-fluid floor">
+<div class="container-fluid floor floor1">
     <div class="row">
         <div class="zuopin">关于我</div>
     </div>
@@ -511,7 +509,7 @@
             <p>自信但不自负、不以自我为中心</p>
             <p>积极进取、适应力强、勤奋好学、脚踏实地</p>
             <h1>座右铭:</h1>
-            <p>人生就像心电图,要想一帆风顺除非你死了</p>
+            <p>人生就像心电图 , 要想一帆风顺除非你死了</p>
 
         </div>
         <div class="col-s-12 col-m-8 col-l-5 ">
@@ -530,7 +528,7 @@
 
 
 <!--联系我-->
-<div class="container-fluid floor">
+<div class="container-fluid floor floor1">
     <div class="row">
         <div class="zuopin">联系我</div>
     </div>
