--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
             </div>
         </div>
     </div>
-
-
 </div>
 
 
@@ -108,19 +106,6 @@
 </div>
 
 
-<!--小轮播-->
-<div class="container-fluid hengimg">
-    <div class="row imgs">
-        <div class="col-s-3 col-m-3 col-l-3 item"></div>
-        <div class="col-s-3 col-m-3 col-l-3 item"></div>
-        <div class="col-s-3 col-m-3 col-l-3 item"></div>
-        <div class="col-s-3 col-m-3 col-l-3 item"></div>
-        <div class="col-s-3 col-m-3 col-l-3 item"></div>
-        <div class="col-s-3 col-m-3 col-l-3 item"></div>
-        <div class="col-s-3 col-m-3 col-l-3 item"></div>
-        <div class="col-s-3 col-m-3 col-l-3 item"></div>
-    </div>
-</div>
 
 
 <!--照片墙-->
@@ -264,16 +249,16 @@
             <div class="yuanzhao">纸牌</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx4"></div>
-            <div class="yuanzhao">qq音乐</div>
+            <div class="imgyouxi yx12"><a href="http://jintianxia.coding.io/"></a></div>
+            <div class="yuanzhao">晋天下官方网站</div>
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx5"><a href="http://matianjiao.github.io/daziyouxi"></a></div>
             <div class="yuanzhao">打字游戏</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx6"></div>
-            <div class="yuanzhao">iCloud日历</div>
+            <div class="imgyouxi yx9"><a href="http://matianjiao.github.io/daziyouxi1"></a></div>
+            <div class="yuanzhao">打字游戏</div>
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx7"><a href="http://matianjiao.github.io/xiaomi"></a></div>
@@ -286,10 +271,6 @@
     </div>
     <div class="row youxi youxida youxiyin">
         <div class="col-l-3">
-            <div class="imgyouxi yx9"><a href="http://matianjiao.github.io/daziyouxi1"></a></div>
-            <div class="yuanzhao">打字游戏</div>
-        </div>
-        <div class="col-l-3">
             <div class="imgyouxi yx10"><a href="http://matianjiao.github.io/huaban"></a></div>
             <div class="yuanzhao">画板</div>
         </div>
@@ -298,16 +279,24 @@
             <div class="yuanzhao">计算器</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx12"><a href="http://jintianxia.duapp.com/"></a></div>
-            <div class="yuanzhao">晋天下官方网站</div>
-        </div>
-        <div class="col-l-3">
             <div class="imgyouxi yx13"><a href="http://matianjiao.github.io/apple"></a></div>
             <div class="yuanzhao">Apple官网</div>
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx14"><a href="http://matianjiao.github.io/jishiben"></a></div>
             <div class="yuanzhao">记事本</div>
+        </div>
+        <!--<div class="col-l-3">-->
+            <!--<div class="imgyouxi yx4"></div>-->
+            <!--<div class="yuanzhao">qq音乐</div>-->
+        <!--</div>-->
+        <div class="col-l-3">
+            <div class="imgyouxi yx6"><a href="http://matianjiao.github.io/rili"></a></div>
+            <div class="yuanzhao">iCloud日历</div>
+        </div>
+        <div class="col-l-3">
+            <div class="imgyouxi yx16"></div>
+            <div class="yuanzhao">待续...</div>
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx15"></div>
@@ -335,16 +324,16 @@
             <div class="yuanzhao">纸牌</div>
         </div>
         <div class="col-m-4">
-            <div class="imgyouxi yx4"></div>
-            <div class="yuanzhao">qq音乐</div>
-        </div>
-        <div class="col-m-4">
             <div class="imgyouxi yx5"><a href="http://matianjiao.github.io/daziyouxi"></a></div>
             <div class="yuanzhao">打字游戏</div>
         </div>
         <div class="col-m-4">
-            <div class="imgyouxi yx6"></div>
-            <div class="yuanzhao">iCloud日历</div>
+            <div class="imgyouxi yx9"><a href="http://matianjiao.github.io/daziyouxi1"></a></div>
+            <div class="yuanzhao">打字游戏</div>
+        </div>
+        <div class="col-m-4">
+            <div class="imgyouxi yx13"><a href="http://matianjiao.github.io/apple"></a></div>
+            <div class="yuanzhao">Apple官网</div>
         </div>
     </div>
     <div class="row youxi youxizhong youxiyin">
@@ -357,49 +346,48 @@
             <div class="yuanzhao">天猫</div>
         </div>
         <div class="col-m-4">
-            <div class="imgyouxi yx9"><a href="http://matianjiao.github.io/daziyouxi1"></a></div>
-            <div class="yuanzhao">打字游戏</div>
-        </div>
-        <div class="col-m-4">
             <div class="imgyouxi yx10"><a href="http://matianjiao.github.io/huaban"></a></div>
             <div class="yuanzhao">画板</div>
         </div>
-
         <div class="col-m-4">
             <div class="imgyouxi yx11"><a href="http://matianjiao.github.io/jisuanqi"></a></div>
             <div class="yuanzhao">计算器</div>
         </div>
+        <!--<div class="col-m-4">-->
+            <!--<div class="imgyouxi yx4"></div>-->
+            <!--<div class="yuanzhao">qq音乐</div>-->
+        <!--</div>-->
+        <!--<div class="col-m-4">-->
+            <!--<div class="imgyouxi yx6"></div>-->
+            <!--<div class="yuanzhao">iCloud日历</div>-->
+        <!--</div>-->
         <div class="col-m-4">
-            <div class="imgyouxi yx12"></div>
-            <div class="yuanzhao">待续...</div>
-        </div>
-    </div>
-    <div class="row youxi youxizhong youxiyin">
-        <div class="col-m-4">
-            <div class="imgyouxi yx13"><a href="http://matianjiao.github.io/apple"></a></div>
-            <div class="yuanzhao">Apple官网</div>
+            <div class="imgyouxi yx12"><a href="http://jintianxia.coding.io/"></a></div>
+            <div class="yuanzhao">晋天下官方网站</div>
         </div>
         <div class="col-m-4">
             <div class="imgyouxi yx14"><a href="http://matianjiao.github.io/jishiben"></a></div>
             <div class="yuanzhao">记事本</div>
         </div>
-        <div class="col-m-4">
-            <div class="imgyouxi yx15"></div>
-            <div class="yuanzhao">待续...</div>
-        </div>
-        <div class="col-m-4">
-            <div class="imgyouxi yx16"></div>
-            <div class="yuanzhao">待续...</div>
-        </div>
-        <div class="col-m-4">
-            <div class="imgyouxi yx17"></div>
-            <div class="yuanzhao">待续...</div>
-        </div>
-        <div class="col-m-4">
-            <div class="imgyouxi yx18"></div>
-            <div class="yuanzhao">待续...</div>
-        </div>
     </div>
+    <!--<div class="row youxi youxizhong youxiyin">-->
+        <!--<div class="col-m-4">-->
+            <!--<div class="imgyouxi yx15"></div>-->
+            <!--<div class="yuanzhao">待续...</div>-->
+        <!--</div>-->
+        <!--<div class="col-m-4">-->
+            <!--<div class="imgyouxi yx16"></div>-->
+            <!--<div class="yuanzhao">待续...</div>-->
+        <!--</div>-->
+        <!--<div class="col-m-4">-->
+            <!--<div class="imgyouxi yx17"></div>-->
+            <!--<div class="yuanzhao">待续...</div>-->
+        <!--</div>-->
+        <!--<div class="col-m-4">-->
+            <!--<div class="imgyouxi yx18"></div>-->
+            <!--<div class="yuanzhao">待续...</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
 </div>
 <!--小-->
@@ -419,24 +407,25 @@
     </div>
     <div class="row youxi youxixiao youxiyin">
         <div class="col-s-12">
-            <div class="imgyouxi yx3"><a href="http://matianjiao.github.io/poker1"></a></div>
-            <div class="yuanzhao">纸牌</div>
+            <div class="imgyouxi yx9"><a href="http://matianjiao.github.io/daziyouxi1"></a></div>
+            <div class="yuanzhao">打字游戏</div>
         </div>
-        <div class="col-s-12">
-            <div class="imgyouxi yx4"></div>
-            <div class="yuanzhao">qq音乐</div>
-        </div>
-    </div>
-    <div class="row youxi youxixiao youxiyin">
         <div class="col-s-12">
             <div class="imgyouxi yx5"><a href="http://matianjiao.github.io/daziyouxi"></a></div>
             <div class="yuanzhao">打字游戏</div>
         </div>
-        <div class="col-s-12">
-            <div class="imgyouxi yx6"></div>
-            <div class="yuanzhao">iCloud日历</div>
-        </div>
+
     </div>
+    <!--<div class="row youxi youxixiao youxiyin">-->
+        <!--<div class="col-s-12">-->
+            <!--<div class="imgyouxi yx4"></div>-->
+            <!--<div class="yuanzhao">qq音乐</div>-->
+        <!--</div>-->
+        <!--<div class="col-s-12">-->
+            <!--<div class="imgyouxi yx6"></div>-->
+            <!--<div class="yuanzhao">iCloud日历</div>-->
+        <!--</div>-->
+    <!--</div>-->
     <div class="row youxi youxixiao youxiyin">
         <div class="col-s-12">
             <div class="imgyouxi yx7"><a href="http://matianjiao.github.io/xiaomi"></a></div>
@@ -449,8 +438,8 @@
     </div>
     <div class="row youxi youxixiao youxiyin">
         <div class="col-s-12">
-            <div class="imgyouxi yx9"><a href="http://matianjiao.github.io/daziyouxi1"></a></div>
-            <div class="yuanzhao">打字游戏</div>
+            <div class="imgyouxi yx3"><a href="http://matianjiao.github.io/poker1"></a></div>
+            <div class="yuanzhao">纸牌</div>
         </div>
         <div class="col-s-12">
             <div class="imgyouxi yx10"><a href="http://matianjiao.github.io/huaban"></a></div>
@@ -463,7 +452,7 @@
             <div class="yuanzhao">计算器</div>
         </div>
         <div class="col-s-12">
-            <div class="imgyouxi yx12"><a href="http://jintianxia.duapp.com/"></a></div>
+            <div class="imgyouxi yx12"><a href="http://jintianxia.coding.io/"></a></div>
             <div class="yuanzhao">晋天下官方网站</div>
         </div>
     </div>
@@ -477,12 +466,7 @@
             <div class="yuanzhao">记事本</div>
         </div>
     </div>
-
 </div>
-
-
-
-
 
 
 <!--关于我-->
@@ -524,6 +508,20 @@
         </div>
     </div>
 
+</div>
+
+<!--小轮播-->
+<div class="container-fluid hengimg">
+    <div class="row imgs">
+        <div class="col-s-3 col-m-3 col-l-3 item"></div>
+        <div class="col-s-3 col-m-3 col-l-3 item"></div>
+        <div class="col-s-3 col-m-3 col-l-3 item"></div>
+        <div class="col-s-3 col-m-3 col-l-3 item"></div>
+        <div class="col-s-3 col-m-3 col-l-3 item"></div>
+        <div class="col-s-3 col-m-3 col-l-3 item"></div>
+        <div class="col-s-3 col-m-3 col-l-3 item"></div>
+        <div class="col-s-3 col-m-3 col-l-3 item"></div>
+    </div>
 </div>
 
 
