--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
             <div class="yuanzhao">纸牌</div>
         </div>
         <div class="col-l-3">
-            <div class="imgyouxi yx12"><a href="http://jintianxia.coding.io/"></a></div>
-            <div class="yuanzhao">晋天下官方网站</div>
+            <div class="imgyouxi yx12"><a href="http://amaiti.com.cn/"></a></div>
+            <div class="yuanzhao">阿买提官方网站</div>
         </div>
         <div class="col-l-3">
             <div class="imgyouxi yx5"><a href="http://matianjiao.github.io/daziyouxi"></a></div>
@@ -362,8 +362,8 @@
             <!--<div class="yuanzhao">iCloud日历</div>-->
         <!--</div>-->
         <div class="col-m-4">
-            <div class="imgyouxi yx12"><a href="http://jintianxia.coding.io/"></a></div>
-            <div class="yuanzhao">晋天下官方网站</div>
+            <div class="imgyouxi yx12"><a href="http://amaiti.com.cn"></a></div>
+            <div class="yuanzhao">阿买提官方网站</div>
         </div>
         <div class="col-m-4">
             <div class="imgyouxi yx14"><a href="http://matianjiao.github.io/jishiben"></a></div>
@@ -452,8 +452,8 @@
             <div class="yuanzhao">计算器</div>
         </div>
         <div class="col-s-12">
-            <div class="imgyouxi yx12"><a href="http://jintianxia.coding.io/"></a></div>
-            <div class="yuanzhao">晋天下官方网站</div>
+            <div class="imgyouxi yx12"><a href="http://amaiti.com.cn"></a></div>
+            <div class="yuanzhao">阿买提官方网站</div>
         </div>
     </div>
     <div class="row youxi youxixiao youxiyin">
